--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -14,7 +14,16 @@
 </head>
 <body>
 <main role="main" class="container-fluid">
-    {% block body %}{% endblock %}
+
+        {% for type, messages in app.session.flashBag.all %}
+            {% for message in messages %}
+                <div class="alert alert-{{ type }}" role="alert">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endfor %}
+        {% block body %}{% endblock %}
+
 </main>
 {% block javascripts %}
     <script
