--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -15,14 +15,11 @@
 <body>
 <main role="main" class="container-fluid">
 
-        {% for type, messages in app.session.flashBag.all %}
-            {% for message in messages %}
-                <div class="alert alert-{{ type }}" role="alert">
-                    {{ message }}
-                </div>
-            {% endfor %}
-        {% endfor %}
+    <div class="container-fluid">
+        {% include 'default/_flash_messages.html.twig' %}
         {% block body %}{% endblock %}
+    </div>
+
 
 </main>
 {% block javascripts %}
